--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -1,10 +1,10 @@
 {
   "Bold": "Полужирный",
   "Italic": "Курсив",
-  "Underline": "Underline",
+  "Underline": "Подчеркивание",
   "Strikethrough": "Зачеркнутый",
-  "Superscript": "Superscript",
-  "Subscript": "Subscript",
+  "Superscript": "Надстрочный индекс",
+  "Subscript": "Нижний индекс",
   "Inline_code": "Код",
   "Header_one": "Заголовок 1",
   "Header_two": "Заголовок 2",
@@ -16,16 +16,16 @@
   "Quote": "Цитата",
   "Ordered_list": "Нумерованный список",
   "Unordered_list": "Маркированный список",
-  "Check_list_item": "Check list item",
-  "Insert_image": "Insert image",
-  "Insert_formula": "Insert formula",
+  "Check_list_item": "Элемент контрольного списка",
+  "Insert_image": "Вставить изображение",
+  "Insert_formula": "Вставить формулу",
   "Formula": "Формула",
-  "Insert_file": "Insert file",
+  "Insert_file": "Вставить файл",
   "Code": "Встроенный код",
-  "Code_block": "Code block",
-  "Insert_link": "Insert link",
-  "Insert_table": "Insert table",
-  "Valid_values_for_rows_and_columns": "Valid values for the number of rows and columns are 0 to 50",
+  "Code_block": "Блок кода",
+  "Insert_link": "Вставить ссылку",
+  "Insert_table": "Вставить таблицу",
+  "Valid_values_for_rows_and_columns": "Допустимые значения количества строк и столбцов: от 0 до 50",
   "Save": "Сохранить",
   "More": "Подробнее",
   "Invalid_url": "Недопустимый URL",
@@ -39,11 +39,11 @@
   "Help": "Помощь",
   "Column": "Столбец",
   "Row": "Строка",
-  "Delete_table": "Delete table",
-  "Delete_row": "Delete row",
-  "Delete_column": "Delete column",
-  "Insert_row": "Insert row",
-  "Insert_column": "Insert column",
+  "Delete_table": "Удалить таблицу",
+  "Delete_row": "Удалить строку",
+  "Delete_column": "Удалить столбец",
+  "Insert_row": "Вставить строку",
+  "Insert_column": "Вставить столбец",
   "Set_align": "Установить выравнивание",
   "Left": "Слева",
   "Center": "По центру",
@@ -81,33 +81,33 @@
   "Insert_network_image": "Вставить удаленное изображение",
   "Upload_local_image": "Загрузить локальное изображение",
   "Add_link": "Добавить ссылку",
-  "File_history": "File history",
-  "History_version": "History versions",
-  "Back_to_viewer": "Back to viewer",
+  "File_history": "История файла",
+  "History_version": "История версий",
+  "Back_to_viewer": "Вернуться к просмотру",
   "Link_title": "Название ссылки",
   "Local_draft": "Локальный черновик",
   "Use_draft": "Использовать черновик",
   "Delete_draft": "Удалить черновик",
   "You_have_an_unsaved_draft_do_you_like_to_use_it": "У вас есть несохраненный черновик. Хотите использовать его?",
   "Local_draft_saved": "Локальный черновик сохранен",
-  "New_draft": "New draft",
-  "View_draft": "View draft",
+  "New_draft": "Новый черновик",
+  "View_draft": "Просмотр черновика",
   "Publish": "Опубликовать",
   "This_file_has_a_draft": "Этот файл имеет черновик.", 
   "Delete": "Удалить",
   "Reply": "Ответ",
   "Comment": "Комментарий",
   "Comments": "Комментарии",
-  "All_comments": "All comments",
-  "Resolved_comments": "Resolved comments",
-  "Unresolved_comments": "Unresolved comments",
-  "Total_1_comment": "Total 1 comment",
-  "Total_count_comments": "Total {{count}} comments",
+  "All_comments": "Все комментарии",
+  "Resolved_comments": "Разрешенные комментарии",
+  "Unresolved_comments": "Неразрешенные комментарии",
+  "Total_1_comment": "Всего 1 комментарий",
+  "Total_count_comments": "Всего {{count}} комментариев",
   "Add_a_comment": "Добавить комментарий...",
   "No_comment_yet": "Комментариев пока нет.",
   "Mark_as_Resolved": "Отметить как решенный",
-  "Resubmit": "Resubmit",
-  "Resubmitted": "Resubmitted",
+  "Resubmit": "Повторить отправку",
+  "Resubmitted": "Отправлено повторно",
   "Ask_for_review": "Спросить отзыв",
   "Review_already_exists": "Отзыв уже существует",
   "View_review": "Просмотр отзыва",
@@ -117,8 +117,8 @@
   "This_file_is_in_review_stage": "Этот файл находится на стадии проверки.",
   "This_file_has_been_updated": "Этот файл был обновлен.",
   "Refresh": "Обновить",
-  "Related_files": "Related files",
-  "Related_file": "Related file",
+  "Related_files": "Связанные файлы",
+  "Related_file": "Связанный файл",
   "No_tags": "Нет тегов",
   "Date": "Дата",
   "Participants": "Участники",
@@ -139,10 +139,10 @@
   "Insert_library_image": "Вставить изображение библиотеки",
   "Size": "Размер",
   "Location": "Местонахождение",
-  "Last_update": "Last update",
+  "Last_update": "Последнее обновление",
   "Tags": "Теги",
   "Add_participants": "Добавить участников",
-  "Clear_format": "Clear format",
+  "Clear_format": "Очистить формат",
   "MarkdownLint": {
     "missing_h1": {
       "description": "В документе нет h1",
@@ -227,134 +227,140 @@
       }
     ]
   },
-  "The_link_address_is_required": "The link address is required.",
-  "The_link_title_is_required": "The link title is required.",
-  "The_link_address_is_invalid": "The link address is invalid, please enter a correct connection address.",
-  "All_changes_saved": "All changes saved",
+  "The_link_address_is_required": "Адрес ссылки обязателен.",
+  "The_link_title_is_required": "Заголовок ссылки обязателен.",
+  "The_link_address_is_invalid": "Адрес ссылки недействителен. Введите правильный адрес подключения.",
+  "All_changes_saved": "Все изменения сохранены",
   "Saving": "Сохранение...",
-  "Collaborators": "Collaborators",
-  "Online_members": "Online members",
-  "Me": "me",
-  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Server is not connected. Operation will be sent to server later.",
-  "Server_is_disconnected_Reconnecting": "Server is disconnected. Reconnecting...",
-  "Server_is_reconnected": "Server is reconnected.",
-  "Outline": "Outline",
-  "Headings_you_add_to_the_document_will_appear_here": "Headings you add to the document will appear here",
+  "Collaborators": "Участники",
+  "Online_members": "Онлайн-участники",
+  "Me": "мне",
+  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Сервер не подключен. Операция будет отправлена ​​на сервер позже.",
+  "Server_is_disconnected_Reconnecting": "Сервер отключен. Повторное подключение...",
+  "Server_is_reconnected": "Сервер переподключен.",
+  "Outline": "Контур",
+  "Headings_you_add_to_the_document_will_appear_here": "Здесь появятся заголовки, которые вы добавите в документ.",
   "Open_parent_folder": "Открыть родительскую папку",
-  "Redo": "redo",
-  "Undo": "undo",
-  "Open_link": "Open link",
-  "Customize_the_number_of_rows_and_columns": "Customize the number of rows and columns",
+  "Redo": "повторить",
+  "Undo": "отменить",
+  "Open_link": "Открыть ссылку",
+  "Customize_the_number_of_rows_and_columns": "Настроить количество строк и столбцов",
   "Rows": "Строки",
   "Columns": "Столбцы",
-  "Please_enter_title": "Please enter title",
-  "Please_enter_text": "Please enter text",
-  "Row(s)": "row(s)",
-  "Column(s)": "column(s)",
-  "Insert_below": "Insert below",
-  "Insert_above": "Insert above",
-  "Insert_on_the_right": "Insert on the right",
-  "Insert_on_the_left": "Insert on the left",
+  "Please_enter_title": "Введите название",
+  "Please_enter_text": "Введите текст",
+  "Row(s)": "строк",
+  "Column(s)": "столбцов",
+  "Insert_below": "Вставить ниже",
+  "Insert_above": "Вставить выше",
+  "Insert_on_the_right": "Вставить справа",
+  "Insert_on_the_left": "Вставить слева",
   "Starred": "Отмеченные",
-  "Unstarred": "Unstarred",
+  "Unstarred": "Не отмечено",
   "Star": "Отметить",
   "Unstar": "Снять отметку",
-  "Auto_wrap": "Auto wrap",
-  "Add_comment": "Add comment",
-  "Delete_comment": "Delete comment",
-  "Delete_reply": "Delete reply",
-  "Are_you_sure_to_delete_this_comment": "Are you sure to delete this comment?",
-  "Are_you_sure_to_delete_this_reply": "Are you sure to delete this reply?",
-  "Enter_a_comment": "Enter a comment",
-  "Enter_a_reply": "Enter a reply",
-  "Reopen_discussion" : "Adding a reply will reopen this discussion",
+  "Auto_wrap": "Авто перенос",
+  "Add_comment": "Добавить комментарий",
+  "Delete_comment": "Удалить комментарий",
+  "Delete_reply": "Удалить ответ",
+  "Are_you_sure_to_delete_this_comment": "Вы уверены, что удалите этот комментарий?",
+  "Are_you_sure_to_delete_this_reply": "Вы уверены, что удалите этот ответ?",
+  "Enter_a_comment": "Введите комментарий",
+  "Enter_a_reply": "Введите ответ",
+  "Reopen_discussion" : "Добавление ответа приведет к возобновлению обсуждения.",
   "Confirm": "Подтвердить",
-  "View_changes": "View changes",
-  "Revision": "Revision",
+  "View_changes": "Просмотр изменений",
+  "Revision": "Пересмотр",
   "Error": "Ошибка",
-  "Start_revise": "Start revise",
-  "Failed_to_execute_operation_on_server": "Failed to execute operation on server, the current operation has been withdrawn",
-  "Start_revise_tip": "Create a temporary document and modify on it, merge it back after reviewing changes",
-  "Load_doc_content_error": "Load doc content error",
-  "Sdoc_format_invalid": "The content of the document does not conform to the sdoc specification",
+  "Start_revise": "Начать пересмотр",
+  "Failed_to_execute_operation_on_server": "Не удалось выполнить операцию на сервере, текущая операция отменена.",
+  "Start_revise_tip": "Создайте временный документ и внесите в него изменения, объедините его обратно после просмотра изменений",
+  "Load_doc_content_error": "Ошибка загрузки содержимого документа",
+  "Sdoc_format_invalid": "Содержание документа не соответствует спецификации sdoc",
   "Draft": "Черновик",
   "Unmark_as_draft": "Убрать пометку как черновик",
-  "Background_color": "Background color",
-  "No_color": "No color",
-  "Standard_color": "Standard color",
-  "Recently_used": "Recently used",
-  "More_color": "More color",
-  "White": "White",
-  "Black": "Black",
-  "Blue_grey": "Blue_grey",
-  "Blue": "Blue",
-  "Sky_blue": "Sky_blue",
-  "Green": "Green",
-  "Red": "Red",
-  "Orange": "Orange",
-  "Yellow": "Yellow",
-  "Purple": "Purple",
-  "Light_grey_x": "Light grey {{value}}",
-  "Dark_grey_x": "Dark grey {{value}}",
-  "Light_blue_grey_x": "Light blue grey {{value}}",
-  "Light_blue_x": "Light blue {{value}}",
-  "Light_sky_blue_x": "Light sky blue {{value}}",
-  "Light_green_x": "Light green {{value}}",
-  "Light_red_x": "Light red {{value}}",
-  "Light_orange_x": "Light orange {{value}}",
-  "Light_yellow_x": "Light yellow {{value}}",
-  "Light_purple_x": "Light purple {{value}}",
-  "Dark_blue_grey_x": "Dark blue grey {{value}}",
-  "Dark_blue_x": "Dark blue {{value}}",
-  "Dark_sky_blue_x": "Dark sky blue {{value}}",
-  "Dark_green_x": "Dark green {{value}}",
-  "Dark_red_x": "Dark red {{value}}",
-  "Dark_orange_x": "Dark orange {{value}}",
-  "Dark_yellow_x": "Dark yellow {{value}}",
-  "Dark_purple_x": "Dark purple {{value}}",
-  "Standard_dark_red": "Standard dark red",
-  "Standard_red": "Standard red",
-  "Standard_orange": "Standard orange",
-  "Standard_yellow": "Standard yellow",
-  "Standard_light_green": "Standard light green",
-  "Standard_green": "Standard green",
-  "Standard_light_blue": "Standard light blue",
-  "Standard_blue": "Standard blue",
-  "Standard_dark_blue": "Standard dark blue",
-  "Standard_purple": "Standard purple",
-  "Highlight_color": "Highlight",
-  "Font_color": "Font color",
+  "Background_color": "Цвет фона",
+  "No_color": "Нет цвета",
+  "Standard_color": "Стандартный цвет",
+  "Recently_used": "Недавно использовано",
+  "More_color": "Больше цвета",
+  "White": "Белый",
+  "Black": "Черный",
+  "Blue_grey": "Серо-голубой",
+  "Blue": "Синий",
+  "Sky_blue": "Лазурный",
+  "Green": "Зеленый",
+  "Red": "Красный",
+  "Orange": "Оранжевый",
+  "Yellow": "Желтый",
+  "Purple": "Фиолетовый",
+  "Light_grey_x": "Светло-серый {{value}}",
+  "Dark_grey_x": "Темно-серый {{value}}",
+  "Light_blue_grey_x": "Светло-синий серый {{value}}",
+  "Light_blue_x": "Светло-синий {{value}}",
+  "Light_sky_blue_x": "Светло-голубой {{value}}",
+  "Light_green_x": "Светло-зеленый {{value}}",
+  "Light_red_x": "Светло-красный {{value}}",
+  "Light_orange_x": "Светло-оранжевый {{value}}",
+  "Light_yellow_x": "Светло-желтый {{value}}",
+  "Light_purple_x": "Светло-фиолетовый {{value}}",
+  "Dark_blue_grey_x": "Темно-синий серый {{value}}",
+  "Dark_blue_x": "Темно-синий {{value}}",
+  "Dark_sky_blue_x": "Темно-голубой {{value}}",
+  "Dark_green_x": "Темно-зеленый {{value}}",
+  "Dark_red_x": "Темно-красный {{value}}",
+  "Dark_orange_x": "Темно-оранжевый {{value}}",
+  "Dark_yellow_x": "Темно-желтый {{value}}",
+  "Dark_purple_x": "Темно-фиолетовый {{value}}",
+  "Standard_dark_red": "Стандартный темно-красный",
+  "Standard_red": "Стандартный красный",
+  "Standard_orange": "Стандартный оранжевый",
+  "Standard_yellow": "Стандартный желтый",
+  "Standard_light_green": "Стандартный светло-зеленый",
+  "Standard_green": "Стандартный зеленый",
+  "Standard_light_blue": "Стандартный светло-голубой",
+  "Standard_blue": "Стандартный синий",
+  "Standard_dark_blue": "Стандартный темно-синий",
+  "Standard_purple": "Стандартный фиолетовый",
+  "Highlight_color": "Выделение",
+  "Font_color": "Цвет шрифта",
   "Default": "По умолчанию",
-  "No_revisions": "No revisions",
-  "1_revision": "1 revision",
-  "x_revisions": "{{count}} revisions",
+  "No_revisions": "Нет редакций",
+  "1_revision": "1 редакция",
+  "x_revisions": "{{count}} редакций",
   "Creator": "Создатель ",
-  "Created_time": "Created time",
-  "Created_at": "Created at",
-  "Resolved_tip": "Mark as resolved and hide discussion",
-  "Search_language": "Search language",
-  "Sdoc_error_tip": "The document has errors and cannot be displayed. Please try to fix it automatically by clicking the button below.",
-  "Repair": "Repair",
-  "Font_size": "Font size",
-  "Increase_font_size": "Increase font size",
-  "Reduce_font_size": "Reduce font size",
+  "Created_time": "Время создания",
+  "Created_at": "Создано",
+  "Resolved_tip": "Отметить как решенное и скрыть обсуждение",
+  "Search_language": "Язык поиска",
+  "Sdoc_error_tip": "Документ содержит ошибки и не может быть отображен. Попробуйте исправить это автоматически, нажав кнопку ниже.",
+  "Repair": "Исправление",
+  "Font_size": "Размер шрифта",
+  "Increase_font_size": "Увеличить размер шрифта",
+  "Reduce_font_size": "Уменьшить размер шрифта",
   "Font": "Шрифт",
-  "All_fonts": "All fonts",
-  "Default_font": "Default font",
-  "Pending_operations_exceed_limit": "There are multiple operations not synced to the server. Please check your network.",
-  "Recently_saved": "Recently saved",
-  "Sdoc_document" : "Sdoc document",
-  "Text_Link": "Text Link",
-  "Icon_and_text_Link": "Icon and text Link",
-  "Card": "Card",
-  "Select_sdoc_document": "Select sdoc document",
-  "Local_file": "Local file",
-  "Internal_server_exec_operations_error": "An exception occurred on the server, please refresh the page and try again",
-  "Failed_to_sync_with_server_operations": "Synchronization with the server failed, please refresh the page",
-  "Style": "Style",
-  "Insert": "Insert",
+  "All_fonts": "Все шрифты",
+  "Default_font": "Шрифт по умолчанию",
+  "Pending_operations_exceed_limit": "Несколько операций не синхронизированы с сервером. Проверьте вашу сеть.",
+  "Recently_saved": "Недавно сохранено",
+  "Sdoc_document" : "Документ Sdoc",
+  "Text_Link": "Текстовая ссылка",
+  "Icon_and_text_Link": "Значок и текстовая ссылка",
+  "Card": "Карта",
+  "Select_sdoc_document": "Выбрать документ sdoc",
+  "Local_file": "Заблокировать файл",
+  "Internal_server_exec_operations_error": "На сервере произошло исключение. Обновите страницу и повторите попытку",
+  "Failed_to_sync_with_server_operations": "Не удалось синхронизироваться с сервером, обновите страницу.",
+  "Style": "Стиль",
+  "Insert": "Вставить",
   "Image": "Изображение",
   "Table": "Таблица",
   "Link": "Ссылка",
-  "Transform_to": "Transform to"
+  "Transform_to": "Преобразовать в",
+  "Last_modification": "Последняя модификация",
+  "Next_modification": "Следующая модификация",
+  "Changes": "Изменения",
+  "No_changes": "Без изменений",
+  "Title": "Название",
+  "Subtitle": "Subtitle"
 }
