--- a/media/sdoc-editor/locales/de/sdoc-editor.json
+++ b/media/sdoc-editor/locales/de/sdoc-editor.json
@@ -356,5 +356,11 @@
   "Image": "Bild",
   "Table": "Tabelle",
   "Link": "Link",
-  "Transform_to": "Transform to"
+  "Transform_to": "Transform to",
+  "Last_modification": "Last modification",
+  "Next_modification": "Next modification",
+  "Changes": "Änderungen",
+  "No_changes": "No changes",
+  "Title": "Titel",
+  "Subtitle": "Subtitle"
 }
