--- a/media/sdoc-editor/locales/es/sdoc-editor.json
+++ b/media/sdoc-editor/locales/es/sdoc-editor.json
@@ -356,5 +356,11 @@
   "Image": "Imagen",
   "Table": "Tabla",
   "Link": "Enlace",
-  "Transform_to": "Transform to"
+  "Transform_to": "Transform to",
+  "Last_modification": "Last modification",
+  "Next_modification": "Next modification",
+  "Changes": "Cambios",
+  "No_changes": "No changes",
+  "Title": "Título",
+  "Subtitle": "Subtitle"
 }
