--- a/media/sdoc-editor/locales/zh_CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh_CN/sdoc-editor.json
@@ -343,7 +343,6 @@
   "Default_font": "默认字体",
   "Pending_operations_exceed_limit": "有多个操作未同步到服务器。请检查你的网络。",
   "Recently_saved": "最近保存",
-  "Sdoc_document" : "sdoc 文档",
   "Text_Link": "文字链",
   "Icon_and_text_Link": "图标+文字链",
   "Card": "卡片",
@@ -362,5 +361,6 @@
   "Changes": "改动",
   "No_changes": "没有变化",
   "Title": "标题",
-  "Subtitle": "副标题"
+  "Subtitle": "副标题",
+  "Link_sdoc": "链接 sdoc"
 }
